Edited wiki page Example1 through web user interface.

--- a/wiki/Example1.wiki
+++ b/wiki/Example1.wiki
@@ -1,4 +1,4 @@
-Пример 1 данного приложения соответствует примеру 1-1 из красной книги OpenGL:
+Пример 1 данного приложения по функционалу соответствует примеру 1-1 из красной книги OpenGL:
 
  === 1.2 Немного OpenGL кода ===
  Поскольку при помощи библиотеки OpenGL можно делать так много вещей,   программа, использующая ее, может быть весьма сложна. Однако базовая структура полезной программы может быть достаточно простой: ее задачами являются инициализация нескольких переменных или переключателей, контролирующих, как OpenGL осуществляет визуализацию изображения и, далее, указание объектов для отображения. 
