--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="ExZagol8">Пример 8</string>
     <string name="ExText8">Антиалиасинг</string>
     
+    <string name="ExZagol9">Пример 9</string>
+    <string name="ExText9">Цветовое наложение в 3D</string>
+    
     <string name="Info1">Исходный код примеров можно скачать по адресу http://code.google.com/p/opengl-red-book-examples/</string>
     <string name="Info2">Автор иконки приложения http://softicons.com/free-icons/designers/c55inator</string>
 
